--- a/templates/index.html
+++ b/templates/index.html
@@ -84,7 +84,7 @@
                     <div class="intro-text">
                         <h1 class="name">Hey there {{name}}!</h1>
                         <hr class="star-light">
-                        <span class="skills">Python Developer - Flask Framework</span>
+                        <span class="skills">Software Engineer, A dad, Lecturer and Coffe addict</span>
                     </div>
                 </div>
             </div>
@@ -167,24 +167,24 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>Chicago Illinois,
-                            <br>United States</p>
+
+												<p>Masjid Misykatul Atsar
+												<br>
+												Kradenan Rt 02/06 Tingkir Lor Tingkir Salatiga
+												</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3></h3>
                         <p></p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>Touch me at</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="https://www.facebook.com/CleverProgrammerr/?ref=br_rs" target="_blank" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
+                                <a href="https://www.facebook.com/mihfazhillah/?ref=br_rs" target="_blank" class="btn-social btn-outline"><span class="sr-only">Facebook</span><i class="fa fa-fw fa-facebook"></i></a>
                             </li>
                             <li>
-                                <a href="https://www.youtube.com/channel/UCqrILQNl5Ed9Dz6CGMyvMTQ" class="btn-social btn-outline" target="_blank"><span class="sr-only">YouTube</span><i class="fa fa-fw fa-youtube"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/CleverProgrammer" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
+                                <a href="https://github.com/ihfazhillah" class="btn-social btn-outline" target="_blank"><span class="sr-only">Linked In</span><i class="fa fa-fw fa-github"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -196,8 +196,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Clever Programmer - CP Flask Portfolio 2017 - Created on C9
-                    </div>
+                        Copyright &copy; ihfazh.com                     </div>
                 </div>
             </div>
         </div>
