--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
    
 
-    <title>{% block title %}About{% endblock %}</title>
+    <title>{% block title %}Ihfazhillah{% endblock %}</title>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
@@ -51,7 +51,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i> 
                 </button>
-                <a class="navbar-brand" href="#page-top">CP Flask App</a>
+                <a class="navbar-brand" href="#page-top">Ihfazhillah</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -82,9 +82,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
-                        <h1 class="name">Hey there {{name}}!</h1>
+                        <h1 class="name">Ihfazhillah</h1>
                         <hr class="star-light">
-                        <span class="skills">Software Engineer, A dad, Lecturer and Coffe addict</span>
+                        <span class="skills">Software Engineer, A dad, Lecturer and Coffe addict.</span>
                     </div>
                 </div>
             </div>
@@ -146,11 +146,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>I love the Flask Framework. I can make so many things simply by leveraging code that other people have made for me to use</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>The languages that you see on this app are HTML, CSS, Python and some JavaScript. By using this BootStrap template I saved myself a lot of time. Instead of creating the HTML and CSS from scratch I was able to edit the template to the way I wanted it to look like.</p>
+                <div class="col-lg-12 col-lg-offset-2">
+                    <p>I love building something, teaching and coaching. I can help you to bring your idea to reality. Give your Idea to me, and we can talk more.</p>
                 </div>
             </div>
         </div>
