--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12 col-lg-offset-2">
+                <div class="col-lg-12">
                     <p>I love building something, teaching and coaching. I can help you to bring your idea to reality. Give your Idea to me, and we can talk more.</p>
                 </div>
             </div>
