change the align

--- a/templates/index.html
+++ b/templates/index.html
@@ -146,8 +146,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
-                    <p>I love building something, teaching and coaching. I can help you to bring your idea to reality. Give your Idea to me, and we can talk more.</p>
+                <div class="col-lg-12 text-center">
+                    <p>I love building something, teaching and coaching. I can help you to bring your idea to reality.</p>
                 </div>
             </div>
         </div>
