add some images

--- a/templates/index.html
+++ b/templates/index.html
@@ -66,6 +66,9 @@
                     <li class="page-scroll">
                         <a href="/python_apps">Python Apps</a>
                     </li>
+                    <li class="page-scroll">
+                        <a href="https://blog.ihfazh.com">Articles</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -102,34 +105,36 @@
                 </div>
             </div>
             <div class="row">
+
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.chesstastic.com/" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="https://gitlab.com/ihfazhillah/targeem-desktop" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/chesstastic.jpeg" target="_blank" class="img-responsive" alt="Chesstastic">
+                        <img src="/static/img/portfolio/targeem-1.jpg" target="_blank" class="img-responsive" alt="targeem">
+                    </a>
+                </div>
+
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#" target="_blank" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
+                            </div>
+                        </div>
+                        <img src="/static/img/portfolio/lontar-on-mobile.jpg" class="img-responsive" alt="Lontar">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.cleverprogrammer.com/" target="_blank" class="portfolio-link" data-toggle="modal">
+                    <a href="#" target="_blank" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="/static/img/portfolio/cleverprogrammer.png" class="img-responsive" alt="Slice of cake">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="https://www.youtube.com/channel/UCqrILQNl5Ed9Dz6CGMyvMTQ" target="_blank" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="/static/img/portfolio/youtubecp.png" class="img-responsive" alt="Circus tent">
+                        <img src="/static/img/portfolio/locast.png" class="img-responsive" alt="Locast">
                     </a>
                 </div>      
             </div>
