--- a/static/css/freelancer.css
+++ b/static/css/freelancer.css
@@ -68,7 +68,7 @@ hr.star-primary:after {
 }
 header {
   text-align: center;
-  background: #18BC9C;
+  background: #92140c;
   color: white;
 }
 header .container {
@@ -181,7 +181,7 @@ section h2 {
   font-size: 3em;
 }
 section.success {
-  background: #18BC9C;
+  background: #92140c;
   color: white;
 }
 @media (max-width: 767px) {
@@ -297,7 +297,7 @@ footer h3 {
 }
 footer .footer-above {
   padding-top: 50px;
-  background-color: #2C3E50;
+  background-color: #1e1e24;
 }
 footer .footer-col {
   margin-bottom: 50px;
