--- a/templates/python_apps.html
+++ b/templates/python_apps.html
@@ -3,19 +3,20 @@
 {% block title %}Python Apps{% endblock %}
 
 {% block content %}
-
-   <div class="container" id="maincontent" tabindex="-1">
+        <div class="container" id="maincontent" tabindex="-1">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/learn_python.jpeg" alt="">
+                    <img class="img-responsive" src="/static/img/komputer_jadulku.jpeg" alt="" width="304"height="236">                                                    
                     <div class="intro-text">
-                        <h1 class="name">Simple Python Apps</h1>
+                        <h1 class="name">Ihfazhillah</h1>
                         <hr class="star-light">
-                        <span class="skills">Let's Play!</span>
+                        <span class="skills">Let's play!</span>
                     </div>
                 </div>
             </div>
         </div>
+
+   
     </header>
 
 
@@ -79,8 +80,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4">
-                    <p>The languages I work with include: HTML, CSS & Python. I work with the Flask Framework for Python development. If you are a non technical person who would like control over your website then I can create a Wordpress website for you. Simplicity, creativity and clarity are the core principles behind my work.</p>
+                <div class="col-lg-12">
+                    <p>Lets play with some script I already made!</p>
                 </div>
             </div>
         </div>
