change color and portofolio

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,52 +39,27 @@
 									<img src="static/img/komputer_jadulku.jpeg" alt="" />
 								</a>
 							</article>
-
 						<!-- Work -->
 							<article id="work" class="panel">
 								<header>
-									<h2>Work</h2>
+							<h2>Work</h2>
 								</header>
 								<p>
                                     Working with you and bring your idea into reality.
-                                </p>
+                                </
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="static/img/portfolio/targeem-1.jpg" alt="Tarjeem - arab indo translator desktop"></a>
+                                            <figcaption>Targeem - Arab Indo Translator. Written in python with pygtk.</figcaption>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="static/img/portfolio/lontar-on-mobile.jpg" alt=""></a>
+                                            <figcaption>Lontar - GPS On precise. RTKLIB on desktop. Flask, Socketio, Reactjs.</figcaption>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="static/img/portfolio/locast.png" alt=""></a>
+                                            <figcaption>Locast - NTRIP Caster with dashboard. Django, Django Channel, Redis.</figcaption>
 										</div>
 									</div>
 								</section>
