--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -1306,7 +1306,7 @@ input, select, textarea {
 	}
 
 	body {
-        background: #676d79;
+        background: #742722;
 		overflow-y: scroll;
 	}
 
@@ -1324,7 +1324,7 @@ input, select, textarea {
 	body, input, textarea, select {
 		font-family: 'Source Sans Pro', sans-serif;
 		font-weight: 300;
-		color: #777777;
+		color: #444444;
 		font-size: 20pt;
 		line-height: 1.75em;
 	}
