[master] add contacts

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,8 +21,8 @@
 					<nav id="nav">
 						<a href="#" class="icon fa-home"><span>Home</span></a>
 						<a href="#work" class="icon fa-folder"><span>Work</span></a>
+						<a href="#rss" class="icon fa-rss"><span>Articles</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/alaminiy" class="icon fa-twitter"><span>Twitter</span></a>
 					</nav>
 
 				<!-- Main -->
@@ -33,6 +33,16 @@
 								<header>
 									<h1>Muhammad Ihfazhillah</h1>
 									<p>Software Engineer, a dad, lecturer.</p>
+
+                                    <div class="contacts">
+                                        <a target="_blank" href="https://facebook.com/mihfazhillah" class="icon fa-facebook"></a>
+                                        <a target="_blank" href="https://github.com/ihfazhillah" class="icon fa-github"></a>
+                                        <a target="_blank" href="https://gitlab.com/ihfazhillah" class="icon fa-gitlab"></a>
+                                        <a target="_blank" href="https://medium.com/@mihfazhillah" class="icon fa-medium"></a>
+                                        <a target="_blank" href="https://twitter.com/alaminiy" class="icon fa-twitter"></a>
+                                    </div>
+
+
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
