--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -7,6 +7,16 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 
+.contacts a {
+    position: relative;
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    font-size: 2em;
+    margin: 0.35em 0.25em 0 0.25em;
+    color: #742722;
+}
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -2168,3 +2178,4 @@ input, select, textarea {
 			}
 
 		}
+
