add figcaption class

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -17,6 +17,7 @@
     color: #742722;
 }
 
+
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
 pre, a, abbr, acronym, address, big, cite,
@@ -41,6 +42,10 @@ footer, header, hgroup, menu, nav, section {
 
 body {
 	line-height: 1;
+}
+
+figcaption {
+    font-size: 0.75em;
 }
 
 ol, ul {
