[master] add some skeleton

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon fa-home"><span>Home</span></a>
+						<a href="#reviews" class="icon fa-comment"><span>Reviews</span></a>
 						<a href="#work" class="icon fa-folder"><span>Work</span></a>
-						<a href="#rss" class="icon fa-rss"><span>Articles</span></a>
+						<a href="#articles" class="icon fa-rss"><span>Articles</span></a>
+						<a href="#python" class="icon fa-hashtag"><span>Scripts</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
 					</nav>
 
@@ -101,6 +103,32 @@
 										</div>
 									</div>
 								</form>
+							</article>
+
+							<article id="python" class="panel">
+								<header>
+									<h2>Python Scripts</h2>
+                                    <p>Simple Python Scripts I made. Let's play!</p>
+								</header>
+
+                                <p>TODO</p>
+
+							</article>
+
+							<article id="articles" class="panel">
+								<header>
+									<h2>Latest Articles</h2>
+								</header>
+								
+                                <p>TODO</p>
+							</article>
+
+							<article id="reviews" class="panel">
+								<header>
+									<h2>Reviews</h2>
+								</header>
+								
+                                <p>TODO</p>
 							</article>
 
 					</div>
