--- a/templates/index.html
+++ b/templates/index.html
@@ -20,8 +20,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<a href="#" class="icon fa-home"><span>Home</span></a>
-						<a href="#reviews" class="icon fa-comment"><span>Reviews</span></a>
 						<a href="#work" class="icon fa-folder"><span>Work</span></a>
+						<a href="#reviews" class="icon fa-comment"><span>Reviews</span></a>
 						<a href="#articles" class="icon fa-rss"><span>Articles</span></a>
 						<a href="#python" class="icon fa-hashtag"><span>Scripts</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
@@ -119,8 +119,12 @@
 								<header>
 									<h2>Latest Articles</h2>
 								</header>
+
+                                <div class="entries">
+                                </div>
+
+
 								
-                                <p>TODO</p>
 							</article>
 
 							<article id="reviews" class="panel">
