[email] add email handling

--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
-								<form action="#" method="post">
+                                <form action="{{ url_for('script_mail') }}" method="post">
 									<div>
 										<div class="row">
 											<div class="col-6 col-12-medium">
