--- a/templates/python_apps.html
+++ b/templates/python_apps.html
@@ -3,88 +3,25 @@
 {% block title %}Python Apps{% endblock %}
 
 {% block content %}
-        <div class="container" id="maincontent" tabindex="-1">
-            <div class="row">
-                <div class="col-lg-12">
-                    <img class="img-responsive" src="/static/img/komputer_jadulku.jpeg" alt="" width="304"height="236">                                                    
-                    <div class="intro-text">
-                        <h1 class="name">Ihfazhillah</h1>
-                        <hr class="star-light">
-                        <span class="skills">Let's play!</span>
-                    </div>
-                </div>
-            </div>
-        </div>
+<article id="home" class="panel intro">
+								<header>
+									<h1>Muhammad Ihfazhillah</h1>
+									<p>Software Engineer, a dad, lecturer.</p>
 
-   
-    </header>
+                                    <div class="contacts">
+                                        <a target="_blank" href="https://facebook.com/mihfazhillah" class="icon fa-facebook"></a>
+                                        <a target="_blank" href="https://github.com/ihfazhillah" class="icon fa-github"></a>
+                                        <a target="_blank" href="https://gitlab.com/ihfazhillah" class="icon fa-gitlab"></a>
+                                        <a target="_blank" href="https://medium.com/@mihfazhillah" class="icon fa-medium"></a>
+                                        <a target="_blank" href="https://twitter.com/alaminiy" class="icon fa-twitter"></a>
+                                    </div>
 
 
-
-
-            <!-- Portfolio Grid Section -->
-    
-    <section id="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Simple Python Apps</h2>
-                    <hr class="star-primary">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-4 portfolio-item">
-                <h1>Addition</h1>
-                    <a href="/add_numbers" target="_blank" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="/static/img/add_preview.png" target="_blank" class="img-responsive" alt="Cabin">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                <h1>Shopping List</h1>
-                    <a href="/shopping_list" target="_blank" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="/static/img/shopping_preview.png" class="img-responsive" alt="Slice of cake">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                <h1>Current Time</h1>
-                    <a href="/time" target="_blank" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="/static/img/time_preview.png" class="img-responsive" alt="Circus tent">
-                    </a>
-                </div>      
-            </div>
-        </div>
-    </section>
-
-         <!-- About Section -->
-    <section class="success" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2></h2>
-                    <hr class="star-light">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Lets play with some script I already made!</p>
-                </div>
-            </div>
-        </div>
-    </section>
+								</header>
+								<a href="#work" class="jumplink pic">
+									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
+									<img src="static/img/komputer_jadulku.jpeg" alt="" />
+								</a>
+							</article>
 
 {% endblock%}
