[qaamus] add link to index

--- a/templates/index.html
+++ b/templates/index.html
@@ -60,8 +60,8 @@
 							<h2>Work</h2>
 								</header>
 								<p>
-                                    Working with you and bring your idea into reality.
-                                </
+                                    Bring Idea into reality.
+                                </p>
 								<section>
 									<div class="row">
 										<div class="col-4 col-6-medium col-12-small">
@@ -123,7 +123,14 @@
                                     <p>Simple Python Scripts I made. Let's play!</p>
 								</header>
 
-                                <p>TODO</p>
+                                <div class="scripts">
+                                    <h4>Qaamus</h4>
+                                    <p>Python wrapper for qaamus.com site. Indonesian arabic translator<br>
+                                    Repo: <a href="https://github.com/ihfazhillah/qaamus2/" target="_blank">Github</a>
+                                    <br>
+                                    <a href="/qaamus">Let's Play</a></p>
+                                </div>
+
 
 							</article>
 
