[qaamus] add qaamus template

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,16 +18,14 @@
 			<div id="wrapper">
 
 				<!-- Nav -->
-                {% if index %}
 					<nav id="nav">
-						<a href="#" class="icon fa-home"><span>Home</span></a>
-						<a href="#work" class="icon fa-folder"><span>Work</span></a>
-						<a href="#reviews" class="icon fa-comment"><span>Reviews</span></a>
-						<a href="#articles" class="icon fa-rss"><span>Articles</span></a>
-						<a href="#python" class="icon fa-hashtag"><span>Scripts</span></a>
-						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
+						<a href="/#" class="icon fa-home"><span>Home</span></a>
+						<a href="/#work" class="icon fa-folder"><span>Work</span></a>
+						<a href="/#reviews" class="icon fa-comment"><span>Reviews</span></a>
+						<a href="/#articles" class="icon fa-rss"><span>Articles</span></a>
+						<a href="/#python" class="icon fa-hashtag"><span>Scripts</span></a>
+						<a href="/#contact" class="icon fa-envelope"><span>Contact</span></a>
 					</nav>
-                    {% endif %}
 
 				<!-- Main -->
 					<div id="main">
