[master] add og data

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,28 @@
 -->
 <html>
 	<head>
-		<title>Ihfazhillah</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="static/assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="static/assets/css/noscript.css" /></noscript>
+        <!-- Primary Meta Tags -->
+        <title>Muhammad Ihfazhillah</title>
+        <meta name="title" content="Muhammad Ihfazhillah">
+        <meta name="description" content="Bring your idea into wild. Software Engineer. Mostly writing in python. Lecturer, a dad and coffe addict :D">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://ihfazh.com/">
+        <meta property="og:title" content="Muhammad Ihfazhillah">
+        <meta property="og:description" content="Bring your idea into wild. Software Engineer. Mostly writing in python. Lecturer, a dad and coffe addict :D">
+        <meta property="og:image" content="/static/img/komputer_jadulku.jpeg">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://ihfazh.com/">
+        <meta property="twitter:title" content="Muhammad Ihfazhillah">
+        <meta property="twitter:description" content="Bring your idea into wild. Software Engineer. Mostly writing in python. Lecturer, a dad and coffe addict :D">
+        <meta property="twitter:image" content="/static/img/komputer_jadulku.jpeg">
 	</head>
 	<body class="is-preload">
 
